--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <div class="screenshot_container">
     <!-- Canvas element (screenshot) -->
+    <div id="happy_counter"></div>
     <canvas id="canvas" width="640" height="480"></canvas>
 
     <!-- Capture button -->
@@ -30,9 +31,16 @@
   <!--<input type="text" id="image-url-input" disabled>-->
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="js/jquery-ui.js"></script>
+  <script src="/js/lodash.js"></script>
+  <script src="/js/jquery-ui.js"></script>
   <!--<script src="/js/jquery.ui.rotatable.min.js"></script>-->
-  <script src="js/jquery.ui.touch-punch.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery.ui.touch-punch.js"></script>
+  <script src="/js/utils.js"></script>
+  <script src="/js/clmtrackr.js"></script>
+  <script src="/js/model_pca_20_svm_emotionDetection.js"></script>
+  <script src="/js/emotion_classifier.js"></script>
+  <script src="/js/emotionmodel.js"></script>
+
+  <script src="/js/main.js"></script>
 </body>
 </html>
